# h5view

./: .clang-format  .cmake-format.json  .cmake-format.yaml  .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  conanfile.txt  environment.yml  sonar-project.properties
applications/: CMakeLists.txt
applications/terminaleditor/: CMakeLists.txt  main.cpp
cmake/Modules/: CompilerConfig.cmake  ConfigureCompiler.cmake  CppCheck.cmake  DefineVersion.cmake  EnableCxxTestingMacros.cmake  Findcppcheck.cmake
cmake/Modules/Compilers/: GNUConfig.cmake
devtools/static-analysis/cppcheck/: CMakeLists.txt
docker/: Dockerfile  docker-build.sh
docs/developer/doxygen/: CMakeLists.txt  doxyfile.in  mainpage.txt
scripts/: build.sh
src/: CMakeLists.txt
src/h5view/: CMakeLists.txt  h5view.cpp  h5view.hpp
src/h5view/python/: CMakeLists.txt  h5utils.cpp
src/h5view/test/: CMakeLists.txt  h5viewtest.cpp
src/h5viewer/: CMakeLists.txt  main.cpp  main.py
src/h5viewer/test/: test_main.py
testing/data/: tiny.h5
tools/: git-cmake-format
tools/sonarcloud/: sonarcloud-build-and-scan.sh
